--- a/homework/notebook.ipynb
+++ b/homework/notebook.ipynb
@@ -2,107 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "11ef9478",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mean</th>\n",
-       "      <th>std</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>MPG</th>\n",
-       "      <td>-2.206303e-16</td>\n",
-       "      <td>1.001596</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Cylinders</th>\n",
-       "      <td>2.022444e-16</td>\n",
-       "      <td>1.001596</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Displacement</th>\n",
-       "      <td>7.990777e-17</td>\n",
-       "      <td>1.001596</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Horsepower</th>\n",
-       "      <td>-1.980016e-17</td>\n",
-       "      <td>1.001596</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Weight</th>\n",
-       "      <td>-9.051500e-17</td>\n",
-       "      <td>1.001596</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Acceleration</th>\n",
-       "      <td>-5.275327e-16</td>\n",
-       "      <td>1.001596</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Model Year</th>\n",
-       "      <td>9.419217e-16</td>\n",
-       "      <td>1.001596</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Europe</th>\n",
-       "      <td>3.394312e-17</td>\n",
-       "      <td>1.001596</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Japan</th>\n",
-       "      <td>2.828594e-18</td>\n",
-       "      <td>1.001596</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>USA</th>\n",
-       "      <td>1.697156e-17</td>\n",
-       "      <td>1.001596</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      mean       std\n",
-       "MPG          -2.206303e-16  1.001596\n",
-       "Cylinders     2.022444e-16  1.001596\n",
-       "Displacement  7.990777e-17  1.001596\n",
-       "Horsepower   -1.980016e-17  1.001596\n",
-       "Weight       -9.051500e-17  1.001596\n",
-       "Acceleration -5.275327e-16  1.001596\n",
-       "Model Year    9.419217e-16  1.001596\n",
-       "Europe        3.394312e-17  1.001596\n",
-       "Japan         2.828594e-18  1.001596\n",
-       "USA           1.697156e-17  1.001596"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'standarized_train_horsepower' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 155\u001b[39m\n\u001b[32m    152\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mlinear_model\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LinearRegression\n\u001b[32m    154\u001b[39m horsepower_model = LinearRegression()\n\u001b[32m--> \u001b[39m\u001b[32m155\u001b[39m horsepower_model.fit(\u001b[43mstandarized_train_horsepower\u001b[49m, train_labels)\n\u001b[32m    162\u001b[39m \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[32m    163\u001b[39m \u001b[38;5;66;03m# Intercepto\u001b[39;00m\n\u001b[32m    164\u001b[39m \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[32m    165\u001b[39m horsepower_model.intercept_\n",
+      "\u001b[31mNameError\u001b[39m: name 'standarized_train_horsepower' is not defined"
+     ]
     },
     {
      "data": {
@@ -161,6 +74,8 @@
     "#        2) Europe\n",
     "#        3) Japan\n",
     "dataset.Origin.value_counts()\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -246,6 +161,147 @@
     "    data=scaler.fit_transform(train_dataset),\n",
     "    columns=train_dataset.columns,\n",
     ").describe().transpose()[[\"mean\", \"std\"]]\n",
+    "\n",
+    "\n",
+    "\n",
+    "#\n",
+    "# Efecto del StandardScaler\n",
+    "#\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "pd.DataFrame(\n",
+    "    data=scaler.fit_transform(train_dataset),\n",
+    "    columns=train_dataset.columns,\n",
+    ").describe().transpose()[[\"mean\", \"std\"]]\n",
+    "\n",
+    "\n",
+    "#\n",
+    "# Modelo de regresión lineal\n",
+    "#\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "horsepower_model = LinearRegression()\n",
+    "horsepower_model.fit(standarized_train_horsepower, train_labels)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#\n",
+    "# Intercepto\n",
+    "#\n",
+    "horsepower_model.intercept_\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#\n",
+    "# Coeficientes\n",
+    "#\n",
+    "horsepower_model.coef_\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#\n",
+    "# Predicción. Preparación de las variables independientes\n",
+    "#\n",
+    "import numpy as np\n",
+    "\n",
+    "x = pd.DataFrame({\"Horsepower\": np.linspace(0, 250, 251)})\n",
+    "x.head()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#\n",
+    "# Predicción\n",
+    "#\n",
+    "scaled_x = horsepower_scaler.transform(x)\n",
+    "y = horsepower_model.predict(scaled_x)\n",
+    "y[:5]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "def plot_horsepower(x, y):\n",
+    "    plt.scatter(train_features[\"Horsepower\"], train_labels, label=\"Data\")\n",
+    "    plt.plot(x, y, color=\"k\", label=\"Predictions\")\n",
+    "    plt.xlabel(\"Horsepower\")\n",
+    "    plt.ylabel(\"MPG\")\n",
+    "    plt.legend()\n",
+    "    \n",
+    "    \n",
+    "plot_horsepower(x, y)    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "#\n",
+    "# Evaluación\n",
+    "#\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "test_results = {}\n",
+    "\n",
+    "y_pred = horsepower_model.predict(standarized_test_horsepower)\n",
+    "\n",
+    "test_results[\"horsepower_model\"] = mean_squared_error(\n",
+    "    y_true=test_labels,\n",
+    "    y_pred=y_pred,\n",
+    ")\n",
+    "\n",
+    "test_results    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#\n",
+    "# Preparación de la data\n",
+    "#\n",
+    "features_scaler = StandardScaler()\n",
+    "\n",
+    "features_scaler.fit(train_features)\n",
+    "\n",
+    "standarized_train_features = features_scaler.transform(train_features)\n",
+    "standarized_test_features = features_scaler.transform(test_features)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "linear_model = LinearRegression()\n",
+    "linear_model.fit(standarized_train_features, train_labels)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
